# frc2026

./: README.md  config.py  config.toml  constants.py  pyproject.toml  robot.py
.wpilib/: wpilib_preferences.json
src/: core.py  robotcontainer.py
src/subsystems/: drivetrain.py  intake.py  odometry.py  shooter.py  turret.py  vision.py
